--- a/subject/public/index.html
+++ b/subject/public/index.html
@@ -15,6 +15,7 @@
 
     <script src="/node_modules/angular/angular.min.js"></script>
     <script src="/node_modules/angular-resource/angular-resource.min.js"></script>
+    <script src="/node_modules/angular-animate/angular-animate.min.js"></script>
     <script src="/node_modules/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
     <script src="/app/app.js"></script>
     <script src="/app/components/home/home.js"></script>
